--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="container">
-    <div id="turn">Player X</div>
+    <div id="turn">Player X's Turn</div>
     <div class="game-board">
       <div class="cell" data-index="0"></div>
       <div class="cell" data-index="1"></div>
